# advanced-python_course

./: README.md  requirements.txt
docs/: in-silico_proteomics_simulation.pptx  introduction.pptx  overview_and_preparation.docx
templates/: pyproject.toml
tutorials/: 1_protein_digestion.ipynb  1_protein_digestion_solutions.ipynb  2_liquid_chromatography.ipynb  2_liquid_chromatography_solutions.ipynb  3_mass_spectra_simulation.ipynb  3_mass_spectra_simulation_solutions.ipynb  4_build_and_publish_your_own_package.md  4_build_your_own_package.md  5_bonus_exercises.md  5_build_and_publish_your_own_package.md  5_publish_your_package.md
